[package]
name = "qrscan"
version = "0.1.0"
authors = ["Owlullaby <alexwty626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
opencv = {version = "0.41.1", features = ["buildtime-bindgen"]}
csv = "1.1.3"
